--- a/src/testRunner/tsconfig.json
+++ b/src/testRunner/tsconfig.json
@@ -120,6 +120,7 @@
         "unittests/tscWatch/consoleClearing.ts",
         "unittests/tscWatch/emit.ts",
         "unittests/tscWatch/emitAndErrorUpdates.ts",
+        "unittests/tscWatch/forceConsistentCasingInFileNames.ts",
         "unittests/tscWatch/incremental.ts",
         "unittests/tscWatch/programUpdates.ts",
         "unittests/tscWatch/resolutionCache.ts",
